@@ -2,6 +2,7 @@ package cc.azuramc.bedwars.game;
 
 import cc.azuramc.bedwars.AzuraBedWars;
 import cc.azuramc.bedwars.api.event.player.BedwarsPlayerStateChangeEvent;
+import cc.azuramc.bedwars.api.game.IGamePlayer;
 import cc.azuramc.bedwars.compat.VersionUtil;
 import cc.azuramc.bedwars.compat.util.ItemBuilder;
 import cc.azuramc.bedwars.config.object.SettingsConfig;
@@ -47,7 +48,7 @@ import java.util.concurrent.ConcurrentHashMap;
  * @author an5w1r@163.com
  */
 @Data
-public class GamePlayer {
+public class GamePlayer implements IGamePlayer {
 
     private static final SettingsConfig settingsConfig = AzuraBedWars.getInstance().getSettingsConfig();
 
@@ -187,6 +188,18 @@ public class GamePlayer {
             return null;
         }
         return get(player.getUniqueId());
+    }
+
+    /**
+     * 从在线集合中移除指定玩家
+     * <p>玩家退出时调用，使 GamePlayer 的生命周期与「在线」一致——
+     * 任何存活的 GamePlayer 都对应在线玩家，{@link #getPlayer()} 因而恒为非 null。
+     * 重连所需的本局状态由 {@link ReconnectState} 单独保存。
+     *
+     * @param uuid 玩家 UUID
+     */
+    public static void remove(@NotNull UUID uuid) {
+        GAME_PLAYERS.remove(uuid);
     }
 
     /**
@@ -538,6 +551,7 @@ public class GamePlayer {
      *
      * @return 玩家显示名称
      */
+    @NotNull
     public String getNickName() {
         return this.nickName != null ? this.nickName : this.name;
     }
@@ -643,7 +657,7 @@ public class GamePlayer {
         if (gamePlayers.isEmpty()) {
             return null;
         }
-        return gamePlayers.get(gamePlayers.size() - 1);
+        return gamePlayers.getLast();
     }
 
     /**
@@ -873,64 +887,64 @@ public class GamePlayer {
      * 自定义 setSpectator 方法，触发状态变化事件
      */
     public void setSpectator(boolean spectator) {
-        if (this.gameTeam == null) {
+        GameTeam team = this.gameTeam;
+        if (team == null) {
             return;
         }
-        GameManager gameManager = this.getGameTeam().getGameManager();
+        GameManager gameManager = team.getGameManager();
 
         this.isSpectator = spectator;
-        BedwarsPlayerStateChangeEvent stateEvent = new BedwarsPlayerStateChangeEvent(
-                gameManager, this, BedwarsPlayerStateChangeEvent.StateChangeType.SPECTATOR);
-        Bukkit.getPluginManager().callEvent(stateEvent);
 
-
+        Bukkit.getPluginManager().callEvent(new BedwarsPlayerStateChangeEvent(
+                gameManager, this, BedwarsPlayerStateChangeEvent.StateChangeType.SPECTATOR));
     }
 
     /**
      * 自定义 setRespawning 方法，触发状态变化事件
      */
     public void setRespawning(boolean respawning) {
-        if (this.gameTeam == null) {
+        GameTeam team = this.gameTeam;
+        if (team == null) {
             return;
         }
-        GameManager gameManager = this.getGameTeam().getGameManager();
+        GameManager gameManager = team.getGameManager();
 
         this.isRespawning = respawning;
-        BedwarsPlayerStateChangeEvent stateEvent = new BedwarsPlayerStateChangeEvent(
-                gameManager, this, BedwarsPlayerStateChangeEvent.StateChangeType.RESPAWNING);
-        Bukkit.getPluginManager().callEvent(stateEvent);
 
+        Bukkit.getPluginManager().callEvent(new BedwarsPlayerStateChangeEvent(
+                gameManager, this, BedwarsPlayerStateChangeEvent.StateChangeType.RESPAWNING));
     }
 
     /**
      * 自定义 setInvisible 方法，触发状态变化事件
      */
     public void setInvisible(boolean invisible) {
-        if (this.gameTeam == null) {
+        GameTeam team = this.gameTeam;
+        if (team == null) {
             return;
         }
-        GameManager gameManager = this.getGameTeam().getGameManager();
+        GameManager gameManager = team.getGameManager();
 
         this.isInvisible = invisible;
-        BedwarsPlayerStateChangeEvent stateEvent = new BedwarsPlayerStateChangeEvent(
-                gameManager, this, BedwarsPlayerStateChangeEvent.StateChangeType.INVISIBLE);
-        Bukkit.getPluginManager().callEvent(stateEvent);
 
+        Bukkit.getPluginManager().callEvent(new BedwarsPlayerStateChangeEvent(
+                gameManager, this, BedwarsPlayerStateChangeEvent.StateChangeType.INVISIBLE));
     }
 
     /**
      * 自定义 setReconnect 方法，触发状态变化事件
      */
     public void setReconnect(boolean reconnect) {
-        if (this.gameTeam == null) {
+        GameTeam team = this.gameTeam;
+        if (team == null) {
             return;
         }
-        GameManager gameManager = this.getGameTeam().getGameManager();
+        GameManager gameManager = team.getGameManager();
 
         this.isReconnect = reconnect;
-        BedwarsPlayerStateChangeEvent stateEvent = new BedwarsPlayerStateChangeEvent(
-                gameManager, this, BedwarsPlayerStateChangeEvent.StateChangeType.RECONNECT);
-        Bukkit.getPluginManager().callEvent(stateEvent);
+
+        Bukkit.getPluginManager().callEvent(new BedwarsPlayerStateChangeEvent(
+                gameManager, this, BedwarsPlayerStateChangeEvent.StateChangeType.RECONNECT));
     }
 
     /**
@@ -967,9 +981,14 @@ public class GamePlayer {
                     return;
                 }
 
+                GameTeam closestTeam = closestPlayer.getGameTeam();
+                if (closestTeam == null) {
+                    return;
+                }
+
                 int distance = (int) targetPlayer.getLocation().distance(player.getLocation());
                 gamePlayer.sendActionBar(String.format("§f玩家 %s%s §f距离您 %dm",
-                        closestPlayer.getGameTeam().getChatColor(),
+                        closestTeam.getChatColor(),
                         closestPlayer.getNickName(),
                         distance));
                 player.setCompassTarget(targetPlayer.getLocation());
