@@ -37,7 +37,11 @@ public class FireballHandler implements Listener {
         }
 
         // 获取火球发射者
-        Object metaData = fireball.getMetadata(FIREBALL_METADATA).get(0).value();
+        var metadataList = fireball.getMetadata(FIREBALL_METADATA);
+        if (metadataList.isEmpty()) {
+            return;
+        }
+        Object metaData = metadataList.getFirst().value();
         if (metaData == null) {
             return;
         }
